arruma pagina inicial

--- a/url/templates/url/index.html
+++ b/url/templates/url/index.html
@@ -32,7 +32,7 @@
       </div>
       <div class="main_list">
       <div class="list_bloco">
-        <ul> link encurtado </ul>
+        <ul> {{ url_curta }} </ul>
       </div>
     </div>
     </main>
