adiciona verificador de url

--- a/url/templates/url/index.html
+++ b/url/templates/url/index.html
@@ -24,10 +24,10 @@
     <main>
       <div class="main_container">
         <div class="container_bloco">
-          <div> 
+          <form action=""> 
             <input type="url" placeholder="Insira o link aqui...">
-            <button>Encurtar!</button>
-          </div>
+            <button type="submit">Encurtar!</button>
+          </form>
         </div>
       </div>
       <div class="main_list">
