inserida a uma nova div na index.html

--- a/url/templates/url/index.html
+++ b/url/templates/url/index.html
@@ -22,6 +22,9 @@
       <h1>URL 🤏</h1>
     </header>
     <main>
+      <div class="main_text">
+        <h2>Insira um link:</h2>
+      </div>
       <div class="main_container">
         <div class="container_bloco">
           <div>
