--- a/url/templates/url/index.html
+++ b/url/templates/url/index.html
@@ -47,7 +47,7 @@
     </main>
     <footer>
       <div class="footer_projeto">
-      <p>Projeto por <a href="https://github.com/felipesoaresfl">Felipe Soares</a>, <a href="https://github.com/fernandalizs">Fernanda Liz</a> e <a href="https://github.com/tabataf"> Tábata Faria</p></a>
+      <p>Projeto por <a href="https://github.com/felipesoaresfl">Felipe Soares</a>, <a href="https://github.com/fernandalizs">Fernanda Liz</a> e <a href="https://github.com/tabataf"> Tábata de Faria</p></a>
     </div>
     <footer>
   </body>
