ajustado o views para verificar se registro já existe no bd, caso não, cria o registroo

--- a/url/templates/url/index.html
+++ b/url/templates/url/index.html
@@ -38,9 +38,7 @@
       <div class="main_list">
       <div class="list_bloco">
         <ul> 
-          {%for x in url%}
-            <a target="_blank" href="{{ redirecionamento }}">{{ x.url_curta }}</a>
-          {%endfor%}
+            <a target="_blank" href="{{ url_curta }}">{{ url_curta}}</a>
           </ul>
       </div>
     </div>
