ajustado a index.html

--- a/url/templates/url/index.html
+++ b/url/templates/url/index.html
@@ -38,7 +38,7 @@
       <div class="main_list"> {% if request.method == 'POST' %}
       <div class="list_bloco">
         <ul> 
-            <a target="_blank" href="{{ url_curta }}">{{ url_curta}}</a>
+            <a target="_blank" href="{{ url_curta }}">https://myencurt.herokuapp.com/{{ url_curta}}</a>
           </ul>
       </div>
       {% endif %}
