--- a/url/templates/url/index.html
+++ b/url/templates/url/index.html
@@ -16,6 +16,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'url/css/style.css' %}">
     <title>URL 🤏</title>
+    <meta name="description" content="Myencurt: encurtador de URL. Um app onde são passadas URLs originais (geralmente longas), e é gerado uma versão super reduzida. Desta forma quando acessada a versão reduzida, será redirecionada para a URL original.">
   </head>
   <body>
     <header>
