--- a/url/templates/url/error.html
+++ b/url/templates/url/error.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+    <audio autoplay="autoplay" src="{% static 'url/som/pare.mp3' %}"></audio>
+
     <div class="image">
         <img src="{% static 'url/images/404.png' %}" alt="">
         <p class="error">Opss... Essa página não existe!</p>
